# public_freeswitch_adapter

./: README.md  configure.ac
mod_conference/: Makefile.am  conference_api.c  conference_event.c  conference_loop.c  conference_member.c  conference_record.c  conference_utils.c  imm_freeswitch_logger.cpp  imm_freeswitch_logger.h  imm_processor_wrapper.c  imm_processor_wrapper.cpp  imm_processor_wrapper.h  mod_conference.c  mod_conference.h
mod_imm_adapter/: Makefile.am  mod_imm_adapter.cpp  mod_imm_adapter.h  mod_imm_event_manager.cpp  mod_imm_event_manager.h  mod_imm_logger_handler.cpp  mod_imm_logger_handler.h
mod_imm_adapter/conf/autoload_configs/: imm_adapter.conf.xml
